--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,13 +1,3 @@
-<%= form_for @post do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-
-  <%= f.label :body %>
-  <%= f.text_area :body %>
-
-  <%= f.submit "Save" %>
-<% end %>
-
 <h1>New Post</h1>
 
  <div class="row">
@@ -20,21 +10,6 @@
      </ul>
    </div>
    <div class="col-md-8">
-     <%= form_for [@topic, @post] do |f| %>
-       <div class="form-group">
- # #13
-         <%= f.label :title %>
- # #14
-         <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
-       </div>
-       <div class="form-group">
-         <%= f.label :body %>
-         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
-       </div>
-       <div class="form-group">
- # #15
-         <%= f.submit "Save", class: 'btn btn-success' %>
-       </div>
-     <% end %>
+     <%= render partial: 'form', locals: { topic: @topic, post: @post } %>
    </div>
  </div>
