--- a/app/views/favorite_mailer/new_post.html.erb
+++ b/app/views/favorite_mailer/new_post.html.erb
@@ -4,15 +4,9 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>New comment to "<%= @post.title %>"</h1>
-    <small>
-      By: <%= @comment.user.name %>
-    </small>
+    <h1>You are now following "<%= @post.title %>". Please unfavorite to unfollow.</h1>
     <p>
-      <%= @comment.body %>
-    </p>
-    <p>
-      <%= link_to "View Comment on site", topic_post_url(@post.topic, @post, anchor: "comment-#{@comment.id}") %>
+      <%= link_to "View Comment on site", topic_post_url(@post.topic, @post) %>
     </p>
   </body>
 </html>
