rails assignment 32 public profiles completed

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,3 +32,6 @@
 <% else %>
   <p><%= "#{@user.name}"%> has not submitted any comments yet.</p>
 <% end %>
+
+<h2>Favorites</h2>
+<%= render @user.favorites %>
